--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </header>  
         <main class="container">
             <div class="item">
-                <a href="/front-end-practice/bono-landing-form/">Bono Landing form</a>
+                <a href="/bono-landing-form/">Bono Landing form</a>
             </div>
             <div class="item">
-                <a href="/front-end-practice/lumina-website/">Lumina</a>
+                <a href="/lumina-website/">Lumina</a>
             </div>
             
 
