--- a/lumina-website/contact.html
+++ b/lumina-website/contact.html
@@ -49,7 +49,11 @@
     <section class="contact">
       <div class="container container-sm">
         <h2 class="section-heading">Contact Us</h2>
-        <form>
+        <form
+        accept-charset="UTF-8"
+        action="https://www.formbackend.com/f/eccc9193cb873b4c"
+        method="POST"
+        >
           <div class="from-group">
             <label for="first-name" class="visually-hidden"> First Name </label>
             <input
