--- a/lumina-website/index.html
+++ b/lumina-website/index.html
@@ -46,7 +46,7 @@
       </div>
     </section>
     <section class="gallery">
-      <div class="container container-lg gallery-flex">
+      <div class="container container-lg gallery-grid">
         <div class="gallery-item">
           <a href="images/image1.jpg" data-lightbox="image1" data-title="image-1">
             <img src="images/portfolio1.jpg" alt="Portfolio Item 1">
