changed button name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="item">
         <h3 class="project_name">Lumina website</h3>
         <p>Professional Website</p>
-        <a href="/lumina-website/" class="btn">view</a>
+        <a href="/lumina-website/" class="btn">View</a>
       </div>
     </main>
 
