--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@
       <div class="item">
         <h3 class="project_name">Bono Landing Form</h3>
         <p>Basic landing page.</p>
+        <img src="/images/bono.PNG"/>
         <a href="/bono-landing-form/" class="btn">View</a>
       </div>
       <div class="item">
         <h3 class="project_name">Lumina website</h3>
         <p>Professional Website</p>
+        <img src="/images/lumina.PNG"/>
         <a href="/lumina-website/" class="btn">View</a>
+      </div>
+      <div class="item">
+        <h3 class="project_name">Presentation Website</h3>
+        <p>A website with slideshow</p>
+        <img src="/images/presentation.PNG"/>
+        <a href="/presentation_project/" class="btn">View</a>
       </div>
     </main>
 
