--- a/bootstrap/ems_2.0/dash.html
+++ b/bootstrap/ems_2.0/dash.html
@@ -40,11 +40,11 @@
                     <a class="nav-link active" href="dash.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/employees_list.html">Employees</a>
+                    <a class="nav-link " href="employees_list.html">Employees</a>
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link" href="/jobs.html">Jobs</a>
+                    <a class="nav-link" href="jobs.html">Jobs</a>
                 </li>
             </ul>
         </div>
