--- a/bootstrap/ems_2.0/employees_list.html
+++ b/bootstrap/ems_2.0/employees_list.html
@@ -54,11 +54,11 @@
               <a class="nav-link active" href="dash.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/employees_list.html">Employees</a>
+              <a class="nav-link active" href="employees_list.html">Employees</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" href="/jobs.html">Jobs</a>
+              <a class="nav-link active" href="jobs.html">Jobs</a>
             </li>
           </ul>
         </div>
@@ -119,7 +119,7 @@
               Add Employee
             </a>
             <a
-              href="/employees_list.html"
+              href="employees_list.html"
               class="list-group-item list-group-item-action"
             >
               View Employees
@@ -128,7 +128,7 @@
           <div class="list-group shadow-lg small mb-3">
             <div class="list-group-item active">Related Links</div>
             <a
-              href="/jobs.html"
+              href="jobs.html"
               class="list-group-item list-group-item-action"
             >
               View jobs
