--- a/bootstrap/ems_2.0/jobs.html
+++ b/bootstrap/ems_2.0/jobs.html
@@ -119,7 +119,7 @@
                 Add Jobs
               </a>
               <a
-                href="/jobs.html"
+                href="jobs.html"
                 class="list-group-item list-group-item-action"
               >
                 View Jobs
@@ -128,7 +128,7 @@
             <div class="list-group shadow-lg small mb-3">
               <div class="list-group-item active">Related Links</div>
               <a
-                href="/employees_list.html"
+                href="employees_list.html"
                 class="list-group-item list-group-item-action"
               >
                 View Employee
