updated front page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
     <header class="container header-flex">
       <h1 class="hero">Frontend Portfolio</h1>
     </header>
-    <main class="container items-flex">
-
+    <main class="container items-flex-col">
+      <div class="topic-card">
+        <h3>HTML & CSS</h3> 
+      </div>
+      <div class="container items-flex-inside">
+       
         <div class="item">
           <h3 class="project_name">Bono Landing Form</h3>
           <p>Basic landing page.</p>
@@ -45,7 +49,25 @@
           <a href="/tutor-website/" class="btn">View</a>
         </div>
    
-    </main>
+      </div>
+      <div class="topic-card">
+        <h3>Bootstrap</h3> 
+      </div>
+      <div class="container items-flex-inside">
+        <div class="item">
+          <h3 class="project_name">EMS 2.0</h3>
+          <p>Employer Management system.</p>
+          <img src="images/ems.PNG" />
+          <a href="bootstrap/ems_2.0/" class="btn">View</a>
+        </div>
+        <div class="item">
+          <h3 class="project_name">Blog Website</h3>
+          <p>Simple Blog website</p>
+          <img src="images/blog.PNG" />
+          <a href="bootstrap/blog_website/" class="btn">View</a>
+        </div>
+      </div>
+  </div>
 
     <script src="index.js"></script>
   </body>
