--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body class="container wrapper">
     <header class="container header-flex">
@@ -24,26 +25,26 @@
       </div>
       <div class="container items-flex-inside">
        
-        <div class="item">
+        <div class="item" data-aos="fade-left">
           <h3 class="project_name">Bono Landing Form</h3>
           <p>Basic landing page.</p>
           <img src="/images/bono.PNG" />
           <a href="/bono-landing-form/" class="btn">View</a>
         </div>
-        <div class="item">
+        <div class="item" data-aos="fade-right">
           <h3 class="project_name">Lumina website</h3>
           <p>Professional Website.</p>
           <img src="/images/lumina.PNG" />
           <a href="/lumina-website/" class="btn">View</a>
         </div>
-        <div class="item">
+        <div class="item" data-aos="fade-left">
           <h3 class="project_name">Presentation Website</h3>
           <p>A website with slideshow.</p>
           <img src="/images/presentation.PNG" />
           <a href="/presentation_project/" class="btn">View</a>
         </div>
-        <div class="item">
-          <h3 class="project_name">Tutor Website</h3>
+        <div class="item" data-aos="fade-right">
+          <h3 class="project_name" >Tutor Website</h3>
           <p>Course website.</p>
           <img src="/images/tutor.PNG" />
           <a href="/tutor-website/" class="btn">View</a>
@@ -54,21 +55,25 @@
         <h3>Bootstrap</h3> 
       </div>
       <div class="container items-flex-inside">
-        <div class="item">
+        <div class="item" data-aos="fade-right">
           <h3 class="project_name">EMS 2.0</h3>
           <p>Employer Management system.</p>
           <img src="images/ems.PNG" />
           <a href="bootstrap/ems_2.0/" class="btn">View</a>
         </div>
-        <div class="item">
-          <h3 class="project_name">Blog Website</h3>
+        <div class="item" data-aos="fade-left">
+          <h3 class="project_name" >Blog Website</h3>
           <p>Simple Blog website</p>
           <img src="images/blog.PNG" />
           <a href="bootstrap/blog_website/" class="btn">View</a>
         </div>
       </div>
   </div>
-
+  
     <script src="index.js"></script>
-  </body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body> 
 </html>
