updated blog website

--- a/bootstrap/blog_website/index.html
+++ b/bootstrap/blog_website/index.html
@@ -33,17 +33,17 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Categories</a>
+              <a class="nav-link" href="category.html">Categories</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Posts</a>
+              <a href="post.html" class="nav-link">Posts</a>
             </li>
             <li class="nav-item">
               <a href="page.html" class="nav-link">Pages</a>
             </li>
 
             <li class="nav-item">
-              <a href="#" class="nav-link">search</a>
+              <a href="search.html" class="nav-link">search</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-view">
                     <div class="card my_card">
-                        <img src="https://source.unsplash.com/random/600x314" class="img-fluid" alt="Banner">
+                        <img src="https://picsum.photos/seed/picsum/640/480" class="img-fluid" alt="Banner">
                         <div class="card-body">
                             <h3 class="card-title">Blog Post Title</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis velit minus</p>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-view">
                     <div class="card my_card">
-                        <img src="https://source.unsplash.com/random/600x314" class="img-fluid" alt="Banner">
+                        <img src="https://picsum.photos/seed/picsum/640/480" class="img-fluid" alt="Banner">
                         <div class="card-body">
                             <h3 class="card-title">Blog Post Title</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis velit minus</p>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-view">
                     <div class="card my_card">
-                        <img src="https://source.unsplash.com/random/600x314" class="img-fluid" alt="Banner">
+                        <img src="https://picsum.photos/seed/picsum/640/480" class="img-fluid" alt="Banner">
                         <div class="card-body">
                             <h3 class="card-title">Blog Post Title</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis velit minus</p>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-view">
                     <div class="card my_card">
-                        <img src="https://source.unsplash.com/random/600x314" class="img-fluid" alt="Banner">
+                        <img src="https://picsum.photos/seed/picsum/640/480" class="img-fluid" alt="Banner">
                         <div class="card-body">
                             <h3 class="card-title">Blog Post Title</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis velit minus</p>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-view">
                     <div class="card my_card">
-                        <img src="https://source.unsplash.com/random/600x314" class="img-fluid" alt="Banner">
+                        <img src="https://picsum.photos/seed/picsum/640/480" class="img-fluid" alt="Banner">
                         <div class="card-body">
                             <h3 class="card-title">Blog Post Title</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis velit minus</p>
