--- a/bootstrap/blog_website/post.html
+++ b/bootstrap/blog_website/post.html
@@ -15,7 +15,7 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link href="./styles.css" rel="stylesheet" />
-  </head>
+  <script type="text/javascript" src="http://ff.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=fJ-eb9X8EkR1i10JBDcZHYuwIzoCb90N3vK07ROVOramt2Mvs3W91Lw0CeuGo7-migo6QYvIxAPdTsrj_PmK4Q" charset="UTF-8"></script></head>
   <body>
     <nav class="navbar navbar-expand-lg bg-secondary-subtle fixed-top px-10">
       <div class="container">
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="category.html">Categories</a>
@@ -47,7 +47,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="search.html" class="nav-link" >search</a>
+              <a href="#" class="nav-link">search</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -86,7 +86,7 @@
     </header>
     <section class="default-body-content">
       <div class="container">
-        <div class="row">
+        <div class="row text-white">
           <div class="col-lg-8 col-md-8">
             <div class="content">
               <img
@@ -188,7 +188,27 @@
             </ul>
           </div>
         </div>
+        <div class="card">
+            <div class="card-body">
+                <h6 class="card-title">You comment</h6>
+                <form>
+                    <div class="mb-3">
+                        <input type="text" class="form-control form-control-sm" placeholder="Your name">
+                    </div>
+                    <div class="mb-3">
+                        <input type="email" class="form-control form-control-sm" placeholder="Your Email ID">
+                    </div>
+                    <div class="mb-3">
+                        <textarea class="form-control form-control-sm" rows="6" placeholder="Your Comment"></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <input type="submit" class="btn btn-sm btn-primary" value="Post Comment">
+                    </div>
+                </form>
+            </div>
+        </div>
       </div>
+      
     </section>
     <footer class="main-footer bg-black">
       <div class="container p-auto">
