--- a/bootstrap/blog_website/search.html
+++ b/bootstrap/blog_website/search.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="category.html">Categories</a>
@@ -47,7 +47,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="search.html" class="nav-link" >search</a>
+              <a href="search.html" class="nav-link">search</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -69,16 +69,14 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 col-md-8">
             <div class="header-text-holder text-white">
-              <h1>
+              <h1 class="mb-3">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Magnam, officia?
               </h1>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa
-                temporibus, neque asperiores eos fuga suscipit itaque nemo,
-                dolore, unde sunt est quaerat atque magni quibusdam pariatur
-                nostrum. Magni, tempora vero.
-              </p>
+              <div class="input-group">
+                <input type="search" class="form-control form-control-sm" placeholder="Search.." aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-success" type="submit" id="button-addon2"><i class="fa fa-search"></i></button>
+                </div>
             </div>
           </div>
         </div>
