--- a/bootstrap/blog_website/post.html
+++ b/bootstrap/blog_website/post.html
@@ -86,7 +86,7 @@
     </header>
     <section class="default-body-content">
       <div class="container">
-        <div class="row text-white">
+        <div class="row">
           <div class="col-lg-8 col-md-8">
             <div class="content">
               <img
