--- a/tutor-website/index.html
+++ b/tutor-website/index.html
@@ -73,7 +73,7 @@
 
             <button class="hero-button">$29 Get course</button>
           </div>
-          <img class="hero-img" src="/images/header-course.png" />
+          <img class="hero-img" src="./images/header-course.png" />
         </div> 
         </div>
         
