--- a/tutor-website/index.html
+++ b/tutor-website/index.html
@@ -275,7 +275,7 @@
       </section>
       <section class="who-container">
         <div class="who-flex-item">
-          <img src="/images/audience.jpg" />
+          <img src="./images/audience.jpg" />
         </div>
         <div class="who-flex-item">
           <div class="who-text-wrapper">
